[package]
name = "means-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
uuid = { version = "1.1.2", "features" = ["v4"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }